fix unnormal size bug

--- a/设计文档.md
+++ b/设计文档.md
@@ -596,7 +596,7 @@ version_2:
 
 version_3:
 
-![image-20241208233143593](设计文档.assets/image-20241208233143593.png)
+![image-20241210005029291](设计文档.assets/image-20241210005029291.png)
 
 ## 6. 可能遇到的挑战与解决方案
 
@@ -651,3 +651,4 @@ version_3:
 - [ ] 对valueLog做压缩优化(?)
 - [ ] 实现key-only scan（便利用户，一些场景无需找value）
 - [ ] 实现YCSB benchmark测试
+- [ ] 使用内存表或者元数据表做valueLog空洞率记录
