--- a/设计文档.md
+++ b/设计文档.md
@@ -652,3 +652,5 @@ version_3:
 - [ ] 实现key-only scan（便利用户，一些场景无需找value）
 - [ ] 实现YCSB benchmark测试
 - [ ] 使用内存表或者元数据表做valueLog空洞率记录
+- [ ] 需要延迟删除valueLog，做法待商榷
+
