final update for codes

--- a/设计文档.md
+++ b/设计文档.md
@@ -393,7 +393,7 @@ Status ReadValueLog(uint64_t file_id, uint64_t offset,Slice* value);
 调用`MaybeScheduleGarbageCollect()`来安排一个后台线程执行垃圾回收任务。它会等待所有已安排的垃圾回收任务完成，这通过循环检查`background_garbage_collect_scheduled_`标志，并在该标志为真时等待`background_gc_finished_signal_`信号来实现。
 
 ```cpp
-void DBImpl::TEST_GarbageCollect()
+void DBImpl::manual_GarbageCollect()
 ```
 
 
@@ -559,7 +559,7 @@ std::vector<std::string> values;
         db->Put(writeOptions,key,value);
     }
     std::cout<<"start gc"<<std::endl;
-    db->TEST_GarbageCollect();
+    db->manual_GarbageCollect();
     std::cout<<"finish gc"<<std::endl;
 
     for(int i=0;i<5000;i++){
