更新 '设计文档.md'

--- a/设计文档.md
+++ b/设计文档.md
@@ -44,6 +44,12 @@ bash run_my_leveldb.sh
 
 在`run_my_leveldb.sh`脚本内修改workload名称，以测试不同workload下的性能表现。
 
+##### git贡献者对应关系
+
+alexfisher，小人鱼：谢瑞阳
+xxy：徐翔宇
+dgy：（使用实验室服务器测试更改代码提交时使用的git账号）：徐翔宇+谢瑞阳共同使用
+
 ## 1.项目概述
 
 ### 1.1 多字段扩展
